RESOLVED FIXED 92493
REGRESSION(r123856): Breaks the build when disabling inspector
https://bugs.webkit.org/show_bug.cgi?id=92493
Summary REGRESSION(r123856): Breaks the build when disabling inspector
Thiago Marcos P. Santos
Reported 2012-07-27 05:01:46 PDT
Get some errors when compiling MemoryInfo.h.
Attachments
Patch (2.47 KB, patch)
2012-07-27 05:49 PDT, Thiago Marcos P. Santos
no flags
Thiago Marcos P. Santos
Comment 1 2012-07-27 05:49:32 PDT
Kentaro Hara
Comment 2 2012-07-27 06:08:34 PDT
Fixing the build error is critical, but I am not sure if the fix is correct. Looks like Eric and Adam are not in IRC. If you are confident about the fix, I can rubber-stamp it.
Thiago Marcos P. Santos
Comment 3 2012-07-27 06:26:05 PDT
(In reply to comment #2) > Fixing the build error is critical, but I am not sure if the fix is correct. Looks like Eric and Adam are not in IRC. If you are confident about the fix, I can rubber-stamp it. This fix just moves "struct HeapInfo" to outside INSPECTOR #ifdefs. I first thought about moving the struct to a new file... Let's wait and see what Eric and Adam thinks about this.
Kentaro Hara
Comment 4 2012-07-27 06:28:15 PDT
(In reply to comment #3) > Let's wait and see what Eric and Adam thinks about this. They are asleep:) So we might want to land your patch or roll out the original patch. If you can watch the tree for a while, it would be OK to try to land it.
Thiago Marcos P. Santos
Comment 5 2012-07-27 06:40:59 PDT
(In reply to comment #4) > (In reply to comment #3) > > Let's wait and see what Eric and Adam thinks about this. > > They are asleep:) So we might want to land your patch or roll out the original patch. If you can watch the tree for a while, it would be OK to try to land it. IMO is fine. Thanks.
Thiago Marcos P. Santos
Comment 6 2012-07-27 06:41:32 PDT
(In reply to comment #5) > (In reply to comment #4) > > (In reply to comment #3) > > > Let's wait and see what Eric and Adam thinks about this. > > > > They are asleep:) So we might want to land your patch or roll out the original patch. If you can watch the tree for a while, it would be OK to try to land it. > > IMO is fine. Thanks. cq+?
WebKit Review Bot
Comment 7 2012-07-27 06:57:21 PDT
Comment on attachment 154916 [details] Patch Clearing flags on attachment: 154916 Committed r123873: <http://trac.webkit.org/changeset/123873>
WebKit Review Bot
Comment 8 2012-07-27 06:57:25 PDT
All reviewed patches have been landed. Closing bug.
Adam Barth
Comment 9 2012-07-27 11:14:24 PDT
Comment on attachment 154916 [details] Patch Thanks for the fix!
Note You need to log in before you can comment on or make changes to this bug.