REGRESSION(r123856): Breaks the build when disabling inspector https://bugs.webkit.org/show_bug.cgi?id=92493

Patch by Thiago Marcos P. Santos <thiago.santos@intel.com> on 2012-07-27
Reviewed by Kentaro Hara.

* bindings/js/ScriptGCEvent.h:
(WebCore):
* bindings/v8/ScriptGCEvent.h:
(WebCore):

git-svn-id: svn://svn.chromium.org/blink/trunk@123873 bbb929c8-8fbe-4397-9dbb-9b2b20218538