third_party/WebKit/Source/WebCore/bindings/js/ScriptGCEvent.h
@@ -32,11 +32,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef ScriptGCEvent_h
 #define ScriptGCEvent_h
 
-#if ENABLE(INSPECTOR)
-
 namespace WebCore {
-
-class ScriptGCEventListener;
 
 struct HeapInfo {
     HeapInfo()
@@ -51,6 +47,10 @@ struct HeapInfo {
     size_t jsHeapSizeLimit;
 };
 
+#if ENABLE(INSPECTOR)
+
+class ScriptGCEventListener;
+
 class ScriptGCEvent
 {
 public:
@@ -59,7 +59,8 @@ public:
     static void getHeapSize(HeapInfo&);
 };
 
+#endif // ENABLE(INSPECTOR)
+
 } // namespace WebCore
 
-#endif // !ENABLE(INSPECTOR)
 #endif // !defined(ScriptGCEvent_h)
