third_party/WebKit/Source/WebCore/bindings/v8/ScriptGCEvent.h
@@ -32,14 +32,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef ScriptGCEvent_h
 #define ScriptGCEvent_h
 
-#if ENABLE(INSPECTOR)
-
 #include "v8.h"
 #include <wtf/Vector.h>
 
 namespace WebCore {
-
-class ScriptGCEventListener;
 
 struct HeapInfo {
     HeapInfo()
@@ -54,6 +50,10 @@ struct HeapInfo {
     size_t jsHeapSizeLimit;
 };
 
+#if ENABLE(INSPECTOR)
+
+class ScriptGCEventListener;
+
 class ScriptGCEvent
 {
 public:
@@ -67,7 +67,8 @@ private:
     static size_t getUsedHeapSize();
 };
 
+#endif // ENABLE(INSPECTOR)
+
 } // namespace WebCore
 
-#endif // !ENABLE(INSPECTOR)
 #endif // !defined(ScriptGCEvent_h)
